--- a/Web.Config
+++ b/Web.Config
@@ -4,11 +4,11 @@
         <handlers>
             <add name="httpplatformhandler" path="*" verb="*" modules="httpPlatformHandler" resourceType="Unspecified" />
         </handlers>
-        <httpPlatform processPath="d:\home\site\wwwroot\go\bin\go.exe" 
-                      arguments="run d:\home\site\wwwroot\server.go" 
+        <httpPlatform processPath="D:\home\site\wwwroot\go\bin\go.exe" 
+                      arguments="run D:\home\site\wwwroot\server.go" 
                       startupTimeLimit="60">
             <environmentVariables>
-              <environmentVariable name="GOROOT" value="d:\home\site\wwwroot\go" />
+              <environmentVariable name="GOROOT" value="D:\home\site\wwwroot\go" />
             </environmentVariables>
         </httpPlatform>
     </system.webServer>
