--- a/Web.Config
+++ b/Web.Config
@@ -5,7 +5,7 @@
             <add name="httpplatformhandler" path="*" verb="*" modules="httpPlatformHandler" resourceType="Unspecified" />
         </handlers>
         <httpPlatform processPath="D:\home\site\wwwroot\go\bin\go.exe" 
-                      arguments="run D:\home\site\wwwroot\server.go" 
+                      arguments="run D:\home\site\wwwroot\app.go" 
                       startupTimeLimit="60">
             <environmentVariables>
               <environmentVariable name="GOROOT" value="D:\home\site\wwwroot\go" />
